tests/errors/propagate-error.au
def f(a, b) {
    return a + b;
}

def g(a, b) {
    return f(a, b);
}
g("a", 1);